# backend/src/main/java/com/example/wejam/admin/model/AdminActionType.java
@@ -2,5 +2,7 @@ package com.example.wejam.admin.model;
 
 public enum AdminActionType {
     VENUE_APPROVED,
-    VENUE_REJECTED
+    VENUE_REJECTED,
+    HOST_APPROVED,
+    HOST_REJECTED
 }
