# backend/src/main/java/com/example/wejam/verification/model/DocumentType.java
@@ -2,5 +2,7 @@ package com.example.wejam.verification.model;
 
 public enum DocumentType {
     FSSAI_CERTIFICATE,
-    LEASE_AGREEMENT
+    LEASE_AGREEMENT,
+    ID_FRONT,
+    ID_BACK
 }
